[project]
name = "mcp-news"
version = "0.1.0"
description = "MCP Google News Search Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "googlenews",
    "watchfiles",
    "google-generativeai",
    "requests",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
